--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+ 
+
 .App {
   text-align: center;
 }
@@ -29,12 +31,39 @@
 }
 
 .categories-container {
-   display: grid;
+  display: grid;
   grid-template-columns: repeat(3,1fr);
-}
-
-.category-background-image {
-   width: 250px;
-   object-fit: cover;
-   height: auto;
+  gap:2rem;
   }
+
+  .category-container {
+  text-align: center;
+   display: flex;
+  flex-direction: column;
+  padding:1rem;
+  justify-content: space-between;
+  background-color:  #f2f2f2;
+ }
+ 
+.category-background-image--container {
+  margin: auto;
+  max-width: 300px;
+  max-height: 50%;
+ }
+.category-background-image {
+   width: 100%;
+   height: 100%;
+  object-fit: contain;
+}
+.category-body-container button {
+  border:none;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+  cursor:pointer;
+  background-color:#3385ff;
+  color:white
+ }
+ .category-body-container h2 {
+  font-size: large;
+ }
+ 
