add to cart feature

--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -1,4 +1,5 @@
 .navigation {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,10 +10,14 @@
     .nav-links-container {
         display: flex;
         gap: 2rem;
+        align-items: center;
         .nav-link {
             text-decoration: none;
-
         }
+    }
+    .cart-container {
+        font-size: 1.8rem;
+        cursor: pointer;
     }
 }
 
