--- a/src/components/category-item/category-item.styles.scss
+++ b/src/components/category-item/category-item.styles.scss
@@ -1,21 +1,22 @@
 .category-container {
-    text-align: center;
-        display: flex;
+    position: relative;
+    display: flex;
     flex-direction: column;
+    text-align: center;
     padding:1rem;
-    justify-content: space-between;
     background-color:  #f2f2f2;
     .image-container {
-        margin: auto;
+         margin: auto;
+        // width: 100%;
         max-width: 400px;
-        max-height: 50%;
+        // max-height: 50%;
     .image {
         width: 100%;
-        height: 100%;
-        object-fit: contain;
+         object-fit: cover;
         }       
     }
     .category-body-container {
+        bottom: 10px;
         button {
             border:none;
             border-radius: 1rem;
@@ -26,6 +27,7 @@
         }
         h2 {
             font-size: large;
+            cursor: pointer;
         }
     }
 
