--- a/src/components/product/product.styles.scss
+++ b/src/components/product/product.styles.scss
@@ -2,9 +2,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    padding: 1rem;
+    border-bottom: solid 0.1px grey;
+    border-right: solid 0.1px grey;
+     cursor: pointer;
     img{
-        width: 200px;
+        width: 300px;
         height: 200px;
         object-fit: contain;
+    }
+    p {
+        margin: 0;
+        padding: 0.2rem;
+    }
+    span{
+        color: blue;
+        font-weight: 600;
+      }
+    .price {
+        color:red;
+    }
+    .checkmark {
+        color: orange;
+        position: relative;
+        bottom: -2px;
     }
 }
