--- a/src/components/category-item/category-item.styles.scss
+++ b/src/components/category-item/category-item.styles.scss
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-
     padding:1rem;
       .image-container {
          margin: auto;
@@ -29,8 +28,9 @@
             color:white
         }
         h2 {
-            font-size: large;
+            font-size: larger;
             cursor: pointer;
+            font-weight: 800;
         }
     }
 
