--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -3,7 +3,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0.2rem 4rem;
+    border-bottom: 1px solid  #e6e6e6;
     .logo-container {
         text-decoration: none;
         .logo {
