individual page for product

--- a/src/components/shop/shop.styles.scss
+++ b/src/components/shop/shop.styles.scss
@@ -3,5 +3,5 @@
     grid-template-columns: repeat(4,1fr);
     border-left: solid 0.1px grey;
     border-top: solid 0.1px grey;
-
+    width: 100%;
  }
