--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -24,4 +24,9 @@
         cursor: pointer;
     }
 }
+.outlet-container {
+    display: flex;
+    justify-content: center;
+    padding-top:2rem;
+ }
 
