--- a/src/components/shop/shop.styles.scss
+++ b/src/components/shop/shop.styles.scss
@@ -1,7 +1,27 @@
 .shop-container {
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    border-left: solid 0.1px grey;
-    border-top: solid 0.1px grey;
-    width: 100%;
+ 
+    .shop-container-body {
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        width: 100%;
+    }
+    .shop-container-header {
+        display: flex;
+        justify-content: space-between;
+        font-weight: 800;
+        font-size: larger;
+        .filter-sort-container {
+            display: flex;
+            gap:2rem;
+            cursor: pointer;
+            .filter-container {
+                display: flex;
+                align-items: center;
+            }
+            .sort-container {
+                display: flex;
+                align-items: center;
+            }
+        }
+    }
  }
