--- a/src/components/product-page/product-page.styles.scss
+++ b/src/components/product-page/product-page.styles.scss
@@ -4,6 +4,7 @@
         display: flex;
         justify-content: space-between;
         .small-img{
+            
             img {
                 object-fit: cover;
                 width: 100px;
@@ -20,12 +21,20 @@
             }
         }
         .thumbnail {
-
+            max-height: 500px;
+            max-width: 30%;
             img {
                 object-fit: cover;
                 height: 100%;
                 width: 100%;
             }
+        }
+        .container-product-info {
+            display: flex;
+            flex-direction: column;
+            gap:1rem;
+            width: 25%;
+            justify-content: flex-start;
         }
         .title {
             font-size: larger;
