--- a/src/components/product/product.styles.scss
+++ b/src/components/product/product.styles.scss
@@ -4,9 +4,9 @@
     align-items: center;
     text-align: center;
     padding: 1rem;
-    border-bottom: solid 0.1px grey;
-    border-right: solid 0.1px grey;
-     cursor: pointer;
+ 
+    border: solid 0.1px  #f2f2f2;
+      cursor: pointer;
     img{
         width: 300px;
         height: 200px;
@@ -27,5 +27,9 @@
         color: orange;
         position: relative;
         bottom: -2px;
+    }
+    .star-container {
+        display: flex;
+        justify-content: center;
     }
 }
