--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -1,10 +1,15 @@
 .navigation {
-    position: relative;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.2rem 4rem;
     border-bottom: 1px solid  #e6e6e6;
+    font-weight: bolder;
+    background-color: white;
+    z-index: 10;
+    width: 100%;
+    color: blue;
     .logo-container {
         text-decoration: none;
         .logo {
@@ -25,8 +30,8 @@
     }
 }
 .outlet-container {
-    display: flex;
+     display: flex;
     justify-content: center;
-    padding-top:2rem;
+    padding-top: 6rem;
  }
 
