--- a/src/components/carousel/carousel.styles.scss
+++ b/src/components/carousel/carousel.styles.scss
@@ -1,23 +1,52 @@
 .carousel-container {
-    width: 80%;
+    width: 100%;
     position: relative;
+    margin-bottom: 1.6rem;
     .img-container {
         width: 100%;
-        height: 400px;
+        height: 100%;
         img {
             object-fit: cover;
             width: 100%;
             height: 100%;
         }
     }
-    button {
+    .left {
+        left: 1rem; 
         position: absolute;
-        top: 50%;
-        &.left {
-            left: -0.6rem;
-        }
-        &.right {
-            right: -0.6rem;
-         }
+        top: 30%;
+        font-size: 69px;
+        color: white;
+        cursor: pointer;
     }
+    .right {
+        right: 1rem; 
+        position: absolute;
+        top: 30%;
+        font-size: 69px;
+        color: white;
+        cursor: pointer;
+    }
+    .text-container {
+        position: absolute;
+        top:15%;
+    }
+
+    .shopnow-container {
+        position: absolute;
+        width: 250px;
+        top:35%;
+        left: 50%;
+        right: 50%;
+        transform: translateX(-40%);
+        font-size: 49px;
+        color: white;
+        font-weight: bolder;
+        cursor: pointer;
+  
+    }
+ 
+
+
+ 
 }
