--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -1,7 +1,15 @@
 .home-container {
-    width: 100%;
+    width: 90%;
+    position: relative;
+    top:-2.6rem;
+    display: flex;
+    flex-direction: column;
     .carousel {
-        display: flex;
+         display: flex;
         justify-content: center;
+        height: 600px;
+     }
+    .shop-container {
+          display: block;
      }
 }
