--- a/src/components/shop/shop.styles.scss
+++ b/src/components/shop/shop.styles.scss
@@ -6,6 +6,6 @@
         display: grid;
         grid-template-columns: repeat(6,1fr);
         width: 100%;
-        overflow:scroll;
+        // overflow:scroll;
     }
  }
