--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  max-width: 100%;
+  overflow-x: hidden;
    font-family: 'Open Sans';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
