--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -6,8 +6,7 @@
     padding: 0rem 4rem;
     border-bottom: 1px solid  #e6e6e6;
     font-weight: bolder;
-    background-color: white;
-    z-index: 10;
+     z-index: 10;
     width: 100%;
     color: white;
     background-color: black;
@@ -22,6 +21,7 @@
         display: flex;
         gap: 2rem;
         align-items: center;
+        color: white;
         .nav-link {
             text-decoration: none;
             &:visited {
