--- a/src/components/product/product.styles.scss
+++ b/src/components/product/product.styles.scss
@@ -6,7 +6,10 @@
     padding: 1rem;
  
     border: solid 0.1px  #f2f2f2;
-      cursor: pointer;
+    cursor: pointer;
+    transition-property: all; 
+    transition-duration: 0.3s; 
+    transition-timing-function: ease; 
     img{
         width: 300px;
         height: 200px;
@@ -31,5 +34,8 @@
     .star-container {
         display: flex;
         justify-content: center;
+    }
+    &:hover {
+        transform: scale(1.15); 
     }
 }
