--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -1,12 +1,31 @@
 .footer-container {
+    font-size: medium;
+    width: 100%;
+    background-color: black;
+    color: #dee2e6;
     display: flex;
     justify-content: space-evenly;
+    padding: 2rem 15%;
+    margin-top: 2rem;
     >div {
         width: 20%;
          ul {
             cursor: pointer;
             list-style: none;
             padding-left: 0rem;
+            li {
+                padding:0.4rem 0;
+                display: flex;
+                align-items: center;
+                gap: 0.6rem;
+                .logo {
+                    font-size: 1rem;
+                }
+                &:hover {
+                    color: white;
+                }
+            }
         }
+   
     }
 }
