--- a/src/components/carousel/carousel.styles.scss
+++ b/src/components/carousel/carousel.styles.scss
@@ -2,6 +2,7 @@
     width: 100%;
     position: relative;
     margin-bottom: 1.6rem;
+    top: -0.5rem;
     .img-container {
         width: 100%;
         height: 100%;
