--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,11 @@
-body {
-  margin: 0;
-  max-width: 100%;
+ html {
+  height: 100%;
+ }
+ body {
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
-   font-family: 'Open Sans';
+    font-family: 'Open Sans';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -14,4 +17,6 @@ code {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
