--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -1,5 +1,6 @@
 .authentication-container {
     display: flex;
     justify-content: space-around;
-    width: 90%;
+    width: 80%;
+     min-height: calc(61vh);
 }
