--- a/src/components/product-page/product-page.styles.scss
+++ b/src/components/product-page/product-page.styles.scss
@@ -61,17 +61,31 @@
                 font-weight: 900;
                 font-size: large
             }
-
             & .inner-container {
                 display: flex;
                 align-items: center;
-
+                margin:1rem 0;
                 > :first-child {
                     width: 20%;
                     font-size: larger;
                     color: blue;
                 }
+                > :nth-child(2) {
+                    >:nth-child(1) {
+                        font-weight: bolder;
+                    }
+                    >:nth-child(2) {
+                        
+                        margin: 0.6rem 0;
+                    }
+
+                }
+                &.second {
+                    border-top: solid 0.1px gray;
+                    padding-top:0.6rem;
+                }
             }
+
         }
 
         .container-seller {
@@ -89,7 +103,7 @@
                 cursor: pointer;
                 display: flex;
                 align-items: center;
-
+                margin: 1rem 0;
                 .star {
                     color: orange;
                 }
