--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -3,14 +3,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.2rem 4rem;
+    padding: 0.4rem 4rem;
     border-bottom: 1px solid  #e6e6e6;
-    font-weight: bolder;
-     z-index: 10;
+    z-index: 10;
     width: 100%;
     color: white;
     background-color: black;
-    font-weight: bolder;
+    font-weight: 700;
     .logo-container {
         text-decoration: none;
         .logo {
@@ -36,6 +35,19 @@
     .cart-container {
         font-size: 1.8rem;
         cursor: pointer;
+        position: relative;
+        :nth-child(2) {
+            position: absolute;
+            font-size: small;
+            top: -5px;
+            right: -2px;
+            text-align: center;
+            border-radius: 50px;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+
+        }
     }
 }
 .outlet-container {
