--- a/src/components/cart-dropdown/cartdropdown.styles.scss
+++ b/src/components/cart-dropdown/cartdropdown.styles.scss
@@ -2,10 +2,11 @@
     position:absolute;
     min-height: 300px;
     max-height: 500px;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 20px 0;
     background-color: white;
     border: 1px solid black;
     top: 90%;
